--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>infusionsoft-api</artifactId>
     <packaging>jar</packaging>
     <name>infusionsoft-api</name>
-    <version>1.0.2-alpha</version>
+    <version>1.0.3-eri</version>
     <url>https://infusionsoft.jfrog.io/infusionsoft/releasable-builds/com/infusionsoft/infusionsoft-api</url>
     <description>Infusionsoft API Java SDK</description>
     <scm>
@@ -21,15 +21,6 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
-    <developers>
-        <developer>
-            <name>Infusionsoft</name>
-            <email>api@infusionsoft.com</email>
-            <organization>Infusionsoft</organization>
-            <organizationUrl>https://infusionsoft.com</organizationUrl>
-        </developer>
-    </developers>
 
     <build>
         <plugins>
@@ -138,6 +129,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -188,6 +182,12 @@
     </profiles>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
